# AIChatbot_Langchain_and_streamlit

./: README.md  pyproject.toml
local_qdrant/: meta.json
local_qdrant/collection/my_collection/: storage.sqlite
src/: __init__.py  ask_my_pdf_09.py  ask_my_pdf_09_10.py  chatbot_03.py  chatbot_04.py  chatbot_summary_06.py  youtube_summarizer_07.py  youtube_summarizer_08.py
